--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -908,6 +908,13 @@ config INTEL_TDX_KVM_SDV
 	bool "Fixes specific to KVM SDV (incompatible to others)"
 	depends on INTEL_TDX_GUEST
 
+config TDX_FUZZ_KAFL
+       bool "kAFL Fuzzing for TDX"
+       depends on INTEL_TDX_GUEST && !TDX_FUZZ
+	   select INTEL_TDX_KVM_SDV
+       help
+	 Support fuzzing of TDX guests using kAFL
+
 endif #HYPERVISOR_GUEST
 
 source "arch/x86/Kconfig.cpu"
